--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="firstview__main">
             <div class="firstview__main-pict obj-fit-img">
               <!-- imagesに配置した、プロフィール画像のパスを記載する -->
-              <img src="./images/pict-firstview-main.jpg">
+              <img src="./images/DSC_0162.jpeg">
             </div>
             <div class="firstview__info">
               <h2>
@@ -59,18 +59,18 @@
                 </li> -->
                 <li class="firstview__info-account-item">
                   <!-- 記載番号：7 -->
-                  <a href="__URL__" target="_blank">
+                  <a href="https://github.com/teabana" target="_blank">
                     <img src="./images/icon-firstview-info-github.svg" class="firstview__info-account-pict">
                     <span  class="firstview__info-account-name">github</span>
                   </a>
                 </li>
-                <li class="firstview__info-account-item">
-                  <!-- 記載番号：8 -->
+                <!--<li class="firstview__info-account-item">
+                  記載番号：8 
                   <a href="__URL__" target="_blank">
                     <img src="./images/icon-firstview-info-twitter.svg" class="firstview__info-account-pict">
                     <span  class="firstview__info-account-name">Twitter</span>
                   </a>
-                </li>
+                </li> -->
                 <!--  <li class="firstview__info-account-item">
                   記載番号：9
                   <a href="__URL__" target="_blank">
