--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h1>
             <a href="index.html">
               <!-- 記載番号：1 -->
-              <span class="header__logo-title">Tech Taro</span>
+              <span class="header__logo-title">Chibana Hisatomo</span>
               <span class="header__logo-sub">Portfolio</span>
             </a>
           </h1>
@@ -41,7 +41,7 @@
                 <!-- 記載番号：2 -->
                 <span class="firstview__info-name">知花 久智</span>
                 <!-- 記載番号：3 -->
-                <span class="firstview__info-name-sm">Tech Taro</span>
+                <span class="firstview__info-name-sm">Chibana Hisatomo</span>
               </h2>
               <ul class="firstview__info-origin-list">
                 <!-- 記載番号：4 -->
